deprecation of old reports, new reports added etc.

--- a/lang/sv.json
+++ b/lang/sv.json
@@ -24,7 +24,7 @@
         "NoOfActiveBots": "Nr. av bots för den här sidan",
         "PluginDescription": "Upptäcker och räknar besök av bottar och spindlar utan att lagra dem i besöksloggen.",
         "Top10": "Topp 10",
-        "Top_10_Bots": "Topp 10 robotar",
+        "Top_10_Bots": "Bot Tracker: Topp 10 robotar",
         "Widgets": "BotTracker",
         "delete": "ta bort",
         "false": "Nej",
