--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,10 @@
         "PluginDescription": "Detects bots & spiders and counts their visits without tracking them in the visitor log.",
         "BotTracker": "BotTracker",
         "Bot_Tracker": "Bot Tracker",
+        "Bot_Tracker_Total_Over_Time_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
+        "DisplayWidget_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
+        "Top_10_Bots_Deprecated_Report": "Bot Tracker: Top 10 Bots (deprecated report)",
+        "Bot_Tracker_Report": "Bot Tracker: Report",
         "Widgets": "BotTracker",
         "DisplayWidget": "BotTracker Display",
         "BotName": "Bot-Name",
@@ -30,13 +34,15 @@
         "Import_help_line1": "- every linefeed will be removed before the import, so you can insert a break after every bot-entry",
         "Import_help_line2": "- the number of values must be even",
         "Import_help_line3": "- there is NO delimiter \"|\" at the end",
-        "Top_10_Bots": "Top 10 Bots",
+        "Top_10_Bots": "Bot Tracker: Top 10 Bots",
         "hits_by_Bot": "hits by Bot",
         "Top10": "Top10",
         "AddNewBots": "Add new bots",
         "New": "New",
         "Single": "Single",
         "File": "File",
-        "SelectAWebsite": "Select a website"
+        "SelectAWebsite": "Select a website",
+        "ReportDocumentation": "This reports shows the total of bots on given date(s). Note that Bot Tracker does not use Segments.",
+        "TopTenDocumentation": "This reports shows a chart of the top 10 bots on given date(s). Note that Bot Tracker does not use Segments."
     }
 }
