--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,13 +1,13 @@
 {
     "BotTracker": {
-        "PluginDescription": "اكتشاف الزوار من البوت وعناكب الإنترنت وعدّ زياراتها دون تتبعها في سجل الزوار.",
-        "Widgets": "متتبع البوت",
-        "BotName": "اسم البوت",
+        "BotActive": "مفعل",
         "BotCount": "عدد الزيارات",
         "BotKeyword": "كلمة دلالية",
-        "BotActive": "مفعل",
+        "BotName": "اسم البوت",
+        "PluginDescription": "اكتشاف الزوار من البوت وعناكب الإنترنت وعدّ زياراتها دون تتبعها في سجل الزوار.",
+        "Widgets": "متتبع البوت",
+        "false": "لا",
         "save_changes": "حفظ",
-        "true": "نعم",
-        "false": "لا"
+        "true": "نعم"
     }
 }
