--- a/lang/bn.json
+++ b/lang/bn.json
@@ -1,7 +1,7 @@
 {
     "BotTracker": {
-        "BotActive": "সক্রিয়",
-        "save_changes": "সংরক্ষণ করুন",
-        "false": "না"
+        "BotActive": "সক্রিয়",
+        "false": "না",
+        "save_changes": "সংরক্ষণ করুন"
     }
 }
