--- a/lang/bs.json
+++ b/lang/bs.json
@@ -1,9 +1,9 @@
 {
     "BotTracker": {
-        "BotKeyword": "Ključna riječ",
         "BotActive": "Aktivno",
+        "BotKeyword": "Ključna riječ",
+        "false": "No",
         "save_changes": "Sačuvaj",
-        "true": "Da",
-        "false": "No"
+        "true": "Da"
     }
 }
