--- a/lang/de.json
+++ b/lang/de.json
@@ -8,30 +8,30 @@
         "BotTracker": "BotTracker",
         "Bot_Tracker": "Bot Tracker",
         "Config": "BotTracker Konfiguration",
+        "delete": "löschen",
         "DisplayWidget": "BotTracker Anzeige",
         "Error_Fileimport_Not_Even": "Anzahl der Werte in der Datei nicht gerade",
         "Error_Fileimport_Upload": "Fehler beim Upload",
         "Error_empty": "ist leer!",
         "ExtraStats": "erw. Statistik",
+        "false": "Nein",
+        "hits_by_Bot": "Zählung von Bots",
+        "Importfile": "Importdatei wählen...",
         "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
         "Import_help_headline": "Datenformat:",
         "Import_help_line1": "- jeder Zeilenumbruch wird vor dem Import gelöscht, es können also Umbrüche nach jedem Bot-Eintrag eingefügt werden",
         "Import_help_line2": "- die Anzahl der Werte muss gerade sein",
         "Import_help_line3": "- am Ende darf kein Delimiter \"|\" stehen",
-        "Importfile": "Importdatei wählen...",
+        "insert_db": "Default-Bots hinzufügen",
         "Message_bot_inserted": "Bots eingefügt",
         "Message_deleted": "wurde gelöscht!",
         "NoOfActiveBots": "Anzahl Bots für diese Seite",
         "PluginDescription": "Ermitteln und Zählen von Bot & WebSpider-Zugriffen, ohne dass diese im Besucher-Log erscheinen.",
-        "Top10": "Top 10",
-        "Top_10_Bots": "Top 10 Bots",
-        "Widgets": "BotTracker",
-        "delete": "löschen",
-        "false": "Nein",
-        "hits_by_Bot": "Zählung von Bots",
-        "insert_db": "Default-Bots hinzufügen",
         "save_changes": "Speichern",
         "send_file": "Hochladen und Ausführen",
-        "true": "Ja"
+        "Top10": "Top 10",
+        "Top_10_Bots": "Top 10 Bots",
+        "true": "Ja",
+        "Widgets": "BotTracker"
     }
 }
