--- a/lang/eu.json
+++ b/lang/eu.json
@@ -1,9 +1,9 @@
 {
     "BotTracker": {
-        "BotKeyword": "Gako-hitza",
         "BotActive": "Gaituta",
+        "BotKeyword": "Gako-hitza",
+        "false": "Ez",
         "save_changes": "Gorde",
-        "true": "Bai",
-        "false": "Ez"
+        "true": "Bai"
     }
 }
