--- a/lang/fi.json
+++ b/lang/fi.json
@@ -1,28 +1,28 @@
 {
     "BotTracker": {
-        "PluginDescription": "Tunnistaa botit ja laskee niiden osuuden käynneistä, ilman että botteja kirjoitetaan kävijälogeihin.",
-        "Widgets": "BotTracker",
-        "DisplayWidget": "BotTrackerin näkymä",
-        "BotName": "Botin nimi",
+        "BotActive": "Aktiivinen",
         "BotCount": "Käyntien määrä",
         "BotKeyword": "Avainsana",
         "BotLastVisit": "Edellinen käynti",
-        "BotActive": "Aktiivinen",
-        "ExtraStats": "Lisätiedot",
+        "BotName": "Botin nimi",
         "Config": "BotTrackerin asetukset",
-        "save_changes": "Tallenna",
-        "NoOfActiveBots": "Bottien määrä tällä sivulla",
-        "true": "Kyllä",
-        "false": "Ei",
-        "Error_empty": "on tyhjä!",
-        "Message_deleted": "poistettiin!",
-        "Message_bot_inserted": "Botit lisätty",
-        "insert_db": "Lisää oletusasetukset",
         "delete": "poista",
-        "Importfile": "Valitse tiedosto...",
-        "send_file": "Lähetä ja prosessoi tiedosto",
+        "DisplayWidget": "BotTrackerin näkymä",
+        "Error_empty": "on tyhjä!",
         "Error_Fileimport_Upload": "Virhe lähetyksen aikana",
+        "ExtraStats": "Lisätiedot",
+        "false": "Ei",
+        "hits_by_Bot": "osumaa botilta",
+        "Importfile": "Valitse tiedosto...",
+        "insert_db": "Lisää oletusasetukset",
+        "Message_bot_inserted": "Botit lisätty",
+        "Message_deleted": "poistettiin!",
+        "NoOfActiveBots": "Bottien määrä tällä sivulla",
+        "PluginDescription": "Tunnistaa botit ja laskee niiden osuuden käynneistä, ilman että botteja kirjoitetaan kävijälogeihin.",
+        "save_changes": "Tallenna",
+        "send_file": "Lähetä ja prosessoi tiedosto",
         "Top_10_Bots": "Top 10 -botit",
-        "hits_by_Bot": "osumaa botilta"
+        "true": "Kyllä",
+        "Widgets": "BotTracker"
     }
 }
