--- a/lang/hr.json
+++ b/lang/hr.json
@@ -1,8 +1,8 @@
 {
     "BotTracker": {
         "BotKeyword": "Ključna riječ",
+        "false": "Ne",
         "save_changes": "Spremi",
-        "true": "Da",
-        "false": "Ne"
+        "true": "Da"
     }
 }
