--- a/lang/ja.json
+++ b/lang/ja.json
@@ -8,30 +8,31 @@
         "BotTracker": "Botトラッカー",
         "Bot_Tracker": "Botトラッカー",
         "Config": "Botトラッカーの環境設定",
+        "delete": "削除",
         "DisplayWidget": "Botトラッカーを表示",
+        "Error_empty": "空です！",
         "Error_Fileimport_Not_Even": "ファイル内のパラメータの数が均等ではありません",
         "Error_Fileimport_Upload": "アップロード中にエラーが発生しました",
-        "Error_empty": "空です！",
         "ExtraStats": "余分な統計",
+        "false": "いいえ",
+        "hits_by_Bot": "ボットによるヒット",
+        "import_db": "デフォルトボットの挿入",
+        "Importfile": "インポートファイルを選択して下さい...",
         "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
         "Import_help_headline": "データセット・フォーマット：",
         "Import_help_line1": "-インポート前にすべての改行が削除されるため、すべてのボットエントリの後にブレークを挿入できます",
         "Import_help_line2": "-値の数は偶数でなければなりません",
         "Import_help_line3": "- 最後に「|」のデリミタはありません",
-        "Importfile": "インポートファイルを選択して下さい...",
+        "insert_db": "デフォルトボットの挿入",
         "Message_bot_inserted": "ボットを挿入",
         "Message_deleted": "削除されました!",
         "NoOfActiveBots": "このサイトのボットナンバー",
         "PluginDescription": "ボットやスパイダーを検出し、ビジターログでそれらを除外してビジットを数をカウントします。",
-        "Top10": "上位10",
-        "Top_10_Bots": "ボットの上位10",
-        "Widgets": "Botトラッカー",
-        "delete": "削除",
-        "false": "いいえ",
-        "hits_by_Bot": "ボットによるヒット",
-        "insert_db": "デフォルトボットの挿入",
         "save_changes": "保存",
         "send_file": "アップロードおよびプロセスファイル",
-        "true": "はい"
+        "Top10": "上位10",
+        "Top_10_Bots": "ボットの上位10",
+        "true": "はい",
+        "Widgets": "Botトラッカー"
     }
 }
