--- a/lang/ms.json
+++ b/lang/ms.json
@@ -4,7 +4,7 @@
         "BotTracker": "PenjejakBot",
         "Bot_Tracker": "Penjejak Bot",
         "DisplayWidget": "Paparan PenjejakBot",
-        "PluginDescription": "Mengesan bot &amp; perayap dan mengira lawatan mereka tanpa menjejaki mereka dalam log pelawat.",
+        "PluginDescription": "Mengesan bot & perayap dan mengira lawatan mereka tanpa menjejaki mereka dalam log pelawat.",
         "Widgets": "PenjejakBot"
     }
 }
