--- a/lang/nl.json
+++ b/lang/nl.json
@@ -8,30 +8,31 @@
         "BotTracker": "BotTracker",
         "Bot_Tracker": "Bot Tracker",
         "Config": "BotTracker configuratie",
+        "delete": "verwijderen",
         "DisplayWidget": "BotTracker Scherm",
+        "Error_empty": "is leeg!",
         "Error_Fileimport_Not_Even": "Aantal parameters in het bestand zijn niet gelijk",
         "Error_Fileimport_Upload": "Fout tijdens uploaden",
-        "Error_empty": "is leeg!",
         "ExtraStats": "Extra statistieken",
+        "false": "Nee",
+        "hits_by_Bot": "hits per bot",
+        "import_db": "Voeg standaard-Bots in",
+        "Importfile": "Kies uploadbestand...",
         "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
         "Import_help_headline": "Dataset-Format:",
         "Import_help_line1": "- elke regelinvoer wordt vóór het importeren verwijderd, zodat u na elke bot invoer een pauze kunt invoegen",
         "Import_help_line2": "- de nummers van waarden moeten gelijk zijn",
         "Import_help_line3": "- er is geen NO delimeter \"|\" aan het eind",
-        "Importfile": "Kies uploadbestand...",
+        "insert_db": "Voeg standaard-Bots in",
         "Message_bot_inserted": "Bots ingevoegd",
         "Message_deleted": "was verwijderd!",
         "NoOfActiveBots": "Aantal bots voor deze site",
         "PluginDescription": "Detecteert bots en zoekmachines en telt hun bezoek zonder deze in het bezoekerslog te vermelden.",
-        "Top10": "Top10",
-        "Top_10_Bots": "Top 10 bots",
-        "Widgets": "BotTracker",
-        "delete": "verwijderen",
-        "false": "Nee",
-        "hits_by_Bot": "hits per bot",
-        "insert_db": "Voeg standaard-Bots in",
         "save_changes": "Opslaan",
         "send_file": "Upload en Verwerk bestand",
-        "true": "Ja"
+        "Top10": "Top10",
+        "Top_10_Bots": "Top 10 bots",
+        "true": "Ja",
+        "Widgets": "BotTracker"
     }
 }
