--- a/lang/sv.json
+++ b/lang/sv.json
@@ -1,38 +1,38 @@
 {
-    "BotTracker": {
-        "BotActive": "Aktiv",
-        "BotCount": "Besöksräknare",
-        "BotKeyword": "Nyckelord",
-        "BotLastVisit": "Senaste besöket",
-        "BotName": "Bot-namn",
-        "BotTracker": "BotTracker",
-        "Bot_Tracker": "Bot Tracker",
-        "Config": "BotTracker konfiguration",
-        "DisplayWidget": "Visa BotTracker",
-        "Error_Fileimport_Not_Even": "Nummer och parametrar i filen måste vara lika",
-        "Error_Fileimport_Upload": "Fel vid uppladdning",
-        "Error_empty": "är tom!",
-        "ExtraStats": "Extra statistik",
-        "Import_help_format": "botnamn1|botsökord1|botnamn2|botsökord2|…",
-        "Import_help_headline": "Dataset-Format:",
-        "Import_help_line1": "- varje radbrytning kommer att tas bort innan importen så att du kan använda dig av radbrytning efter varje bot-post",
-        "Import_help_line2": "- antalet värden måste vara lika",
-        "Import_help_line3": "Det finns ingen avgränsare \"|\" i slutet",
-        "Importfile": "Välj importfil...",
-        "Message_bot_inserted": "Bottar infogade",
-        "Message_deleted": "raderades!",
-        "NoOfActiveBots": "Nr. av bots för den här sidan",
-        "PluginDescription": "Upptäcker och räknar besök av bottar och spindlar utan att lagra dem i besöksloggen.",
-        "Top10": "Topp 10",
-        "Top_10_Bots": "Bot Tracker: Topp 10 robotar",
-        "Widgets": "BotTracker",
-        "delete": "ta bort",
-        "false": "Nej",
-        "hits_by_Bot": "träffar av robot",
-        "insert_db": "Infoga standard-bots",
-        "save_changes": "Spara",
-        "send_file": "Ladda upp och bearbeta fil",
-        "true": "Ja",
-        "AddNewBots": "Lägg till ny botar"
-    }
+  "BotTracker": {
+    "AddNewBots": "Lägg till ny botar",
+    "BotActive": "Aktiv",
+    "BotCount": "Besöksräknare",
+    "BotKeyword": "Nyckelord",
+    "BotLastVisit": "Senaste besöket",
+    "BotName": "Bot-namn",
+    "BotTracker": "BotTracker",
+    "Bot_Tracker": "Bot Tracker",
+    "Config": "BotTracker konfiguration",
+    "DisplayWidget": "Visa BotTracker",
+    "Error_empty": "är tom!",
+    "Error_Fileimport_Not_Even": "Nummer och parametrar i filen måste vara lika",
+    "Error_Fileimport_Upload": "Fel vid uppladdning",
+    "ExtraStats": "Extra statistik",
+    "false": "Nej",
+    "hits_by_Bot": "träffar av robot",
+    "import_db": "Infoga standard-bots",
+    "Importfile": "Välj importfil...",
+    "Import_help_format": "botnamn1|botsökord1|botnamn2|botsökord2|…",
+    "Import_help_headline": "Dataset-Format:",
+    "Import_help_line1": "- varje radbrytning kommer att tas bort innan importen så att du kan använda dig av radbrytning efter varje bot-post",
+    "Import_help_line2": "- antalet värden måste vara lika",
+    "Import_help_line3": "Det finns ingen avgränsare \"|\" i slutet",
+    "Message_bot_inserted": "Bottar infogade",
+    "Message_deleted": "raderades!",
+    "NoOfActiveBots": "Nr. av bots för den här sidan",
+    "PluginDescription": "Upptäcker och räknar besök av bottar och spindlar utan att lagra dem i besöksloggen.",
+    "save_changes": "Spara",
+    "SelectAWebsite": "Välj webbplats",
+    "send_file": "Ladda upp och bearbeta fil",
+    "Top10": "Topp 10",
+    "Top_10_Bots": "Bot Tracker: Topp 10 robotar",
+    "true": "Ja",
+    "Widgets": "BotTracker"
+  }
 }
