--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,37 +1,36 @@
 {
     "BotTracker": {
         "BotActive": "Etkin",
-        "BotCount": "Ziyaret sayısı",
-        "BotKeyword": "Anahtar Sözcük",
-        "BotLastVisit": "Son ziyaret",
-        "BotName": "Bot adı",
-        "BotTracker": "BotTracker",
-        "Bot_Tracker": "Bot izleyici",
-        "Config": "BotTracker yapılandırması",
-        "DisplayWidget": "BotTracker görünümü",
-        "Error_Fileimport_Not_Even": "Dosyadaki parametre sayısı eşit değil",
-        "Error_Fileimport_Upload": "Dosya yüklenirken sorun çıktı",
-        "Error_empty": "boş!",
-        "ExtraStats": "ek istatistikler",
-        "Import_help_format": "botAdı1|botAnahtarSözcüğü1|botAdı2|botAnahtarSözcüğü2|...",
-        "Import_help_headline": "Veri kümesi biçimi:",
-        "Import_help_line1": "- içe aktarmadan önce her satır sonu karakteri kaldırılır. Böylece her bot kaydından sonra bir kesme ekleyebilirsiniz",
-        "Import_help_line2": "- değer sayısı eşit olmalıdır",
-        "Import_help_line3": "- sonda \"|\" sınırlayıcısı yok",
-        "Importfile": "İçe aktarılacak dosyayı seçin...",
-        "Message_bot_inserted": "Eklenen botlar",
-        "Message_deleted": "silindi!",
-        "NoOfActiveBots": "Bu site için bot sayısı",
-        "PluginDescription": "Botları ve örümcekleri algılar ve ziyaretçi günlüğüne kaydetmeden ziyaretlerini sayar.",
-        "Top10": "En üst 10",
-        "Top_10_Bots": "En üstteki 10 bot",
-        "Widgets": "BotTracker",
-        "delete": "sil",
-        "false": "Hayır",
-        "hits_by_Bot": "botlara göre tıklanmalar",
-        "insert_db": "Varsayılan botları ekle",
-        "save_changes": "Kaydet",
-        "send_file": "Dosyayı yükle ve işle",
-        "true": "Evet"
+        "BotCount": "Numër Vizitash",
+        "BotKeyword": "Fjalëkyç",
+        "BotLastVisit": "Vizita e fundit",
+        "BotName": "Emër Boti",
+        "BotTracker": "Ndjekës Botesh",
+        "Bot_Tracker": "Ndjekës Botesh",
+        "Config": "Formësim Ndjekësi Botesh",
+        "delete": "fshije",
+        "DisplayWidget": "Shfaqje Ndjekësi Botesh",
+        "Error_empty": "është i zbrazët!",
+        "Error_Fileimport_Not_Even": "Numri i parametrave në kartelë s’është i njëllojtë",
+        "Error_Fileimport_Upload": "Gabim gjatë ngarkimit",
+        "ExtraStats": "Statistika ekstra",
+        "hits_by_Bot": "hit-e nga Boti",
+        "Importfile": "Zgjidhni kartelë importimi…",
+        "Import_help_format": "emërboti1|fjalëkyçboti1|emërboti2|fjalëkyçboti1|…",
+        "Import_help_headline": "Format Grupi të Dhënash:",
+        "Import_help_line1": "- çdo “linefeed” do të hiqet para importimit, ndaj mund të futni një ndërprerje pas çdo zëri boti",
+        "Import_help_line2": "- numri i vlerave duhet të jetë i njëllojtë",
+        "Import_help_line3": "- NUK ka kufizues “|” në fund të",
+        "insert_db": "Injekto Bote Parazgjedhje",
+        "Message_bot_inserted": "Bote të injektuar",
+        "Message_deleted": "është fshirë!",
+        "NoOfActiveBots": "Nr. Botesh për këtë sajt",
+        "PluginDescription": "Zbulon bote &amp; merimanga dhe numëron vizitat e tyre, pa ndjekje të tyre te regjistri i vizitorëve.",
+        "save_changes": "Ruaje",
+        "send_file": "Ngarkoje dhe Përpunoje Kartelën",
+        "Top10": "10 Kryesuesit",
+        "Top_10_Bots": "10 Botet Kryesues",
+        "true": "Po",
+        "Widgets": "Ndjekës Botesh"
     }
 }
