--- a/lang/sv.json
+++ b/lang/sv.json
@@ -15,8 +15,8 @@
     "Error_Fileimport_Upload": "Fel vid uppladdning",
     "ExtraStats": "Extra statistik",
     "false": "Nej",
-    "hits_by_Bot": "träffar av robot",
-    "import_db": "Infoga standard-bots",
+    "hits_by_Bot": "träffar av bott",
+    "insert_db": "Infoga/uppdatera standard-bottar",
     "Importfile": "Välj importfil...",
     "Import_help_format": "botnamn1|botsökord1|botnamn2|botsökord2|…",
     "Import_help_headline": "Dataset-Format:",
@@ -25,7 +25,7 @@
     "Import_help_line3": "Det finns ingen avgränsare \"|\" i slutet",
     "Message_bot_inserted": "Bottar infogade",
     "Message_deleted": "raderades!",
-    "NoOfActiveBots": "Nr. av bots för den här sidan",
+    "NoOfActiveBots": "Antal bottar för denna webbplats",
     "PluginDescription": "Upptäcker och räknar besök av bottar och spindlar utan att lagra dem i besöksloggen.",
     "save_changes": "Spara",
     "SelectAWebsite": "Välj webbplats",
