--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -16,13 +16,13 @@
         "ExtraStats": "访问次数",
         "false": "否",
         "hits_by_Bot": "Bot的热门歌曲",
-        "import_db": "插入默认启动",
         "Importfile": "选择导入文件...",
         "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
         "Import_help_headline": "数据集格式：",
         "Import_help_line1": "- 在导入之前，所有换行符都会被删除，因此您可以在每次漫游输入之后插入一个换行符",
         "Import_help_line2": "- 值的数量必须为偶数",
         "Import_help_line3": "- 没有定界符“ |” 在最后",
+        "insert_db": "插入默认启动",
         "Message_bot_inserted": "插入机器人",
         "Message_deleted": "被删除了！",
         "NoOfActiveBots": "该站点的机器人数量",
