--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -15,13 +15,13 @@
     "Error_Fileimport_Upload": "上傳時發生錯誤",
     "ExtraStats": "額外統計",
     "hits_by_Bot": "爬蟲訪問",
-    "import_db": "匯入預設爬蟲",
     "Importfile": "選擇檔案匯入...",
     "Import_help_format": "爬蟲名稱1|爬蟲關鍵字1|爬蟲名稱2|爬蟲關鍵字2|...",
     "Import_help_headline": "資料集格式：",
     "Import_help_line1": "- 資料匯入前所有換行都會自動移除，所以你可以在編輯時插入換行",
     "Import_help_line2": "- 所有值總計必須為偶數",
     "Import_help_line3": "- 結尾不能有分隔符號「|」",
+    "insert_db": "匯入預設爬蟲",
     "Message_bot_inserted": "爬蟲已匯入",
     "Message_deleted": "已刪除！",
     "NoOfActiveBots": "此網站的爬蟲數量",
