--- a/lang/en.json
+++ b/lang/en.json
@@ -1,51 +1,51 @@
 {
-  "BotTracker": {
-    "AddNewBots": "Add new bots",
-    "Added": "added",
-    "BotActive": "Active",
-    "BotCount": "Visit Count",
-    "BotKeyword": "Keyword",
-    "BotLastVisit": "Last visit",
-    "BotName": "Bot-Name",
-    "BotTracker": "BotTracker",
-    "Bot_Tracker": "Bot Tracker",
-    "Bot_Tracker_Report_Stats": "Bot Tracker: Extra stats",
-    "Bot_Tracker_Report": "Bot Tracker: Report",
-    "Bot_Tracker_Total_Over_Time_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
-    "Config": "BotTracker Configuration",
-    "Delete": "delete",
-    "DisplayWidget": "BotTracker Display",
-    "DisplayWidget_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
-    "Error_empty": "is empty!",
-    "Error_Fileimport_Not_Even": "Number of parameter in file are not even",
-    "Error_Fileimport_Upload": "Error during upload",
-    "ExtraStats": "Extra Stats",
-    "File": "File",
-    "false": "No",
-    "hits_by_Bot": "hits by Bot",
-    "Importfile": "Choose Importfile...",
-    "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
-    "Import_help_headline": "Dataset-Format:",
-    "Import_help_line1": "- every linefeed will be removed before the import, so you can insert a break after every bot-entry",
-    "Import_help_line2": "- the number of values must be even",
-    "Import_help_line3": "- there is NO delimiter \"|\" at the end",
-    "insert_db": "Insert Default-Bots",
-    "Message_bot_inserted": "Bots inserted",
-    "Message_deleted": "was deleted!",
-    "New": "New",
-    "NoOfActiveBots": "No. of Bots for this site",
-    "PluginDescription": "Detects bots & spiders and counts their visits without tracking them in the visitor log.",
-    "ReportDocumentation": "This reports shows the total of bots on given date(s). Note that Bot Tracker does not use Segments.",
-    "save_changes": "Save",
-    "SelectAWebsite": "Select a website",
-    "send_file": "Upload and Process File",
-    "Single": "Single",
-    "Top_10_Bots": "Bot Tracker: Top 10 Bots",
-    "Top_10_Bots_Deprecated_Report": "Bot Tracker: Total over time Top 10 Bots (deprecated report)",
-    "Top10": "Top10",
-    "TopTenDocumentation": "This reports shows a chart of the top 10 bots on given date(s). Note that Bot Tracker does not use Segments.",
-    "true": "Yes",
-    "Visit_Timestamp": "Time stamp",
-    "Widgets": "BotTracker"
-  }
+    "BotTracker": {
+        "AddNewBots": "Add new bots",
+        "Added": "added",
+        "BotActive": "Active",
+        "BotCount": "Visit Count",
+        "BotKeyword": "Keyword",
+        "BotLastVisit": "Last visit",
+        "BotName": "Bot-Name",
+        "BotTracker": "BotTracker",
+        "Bot_Tracker": "Bot Tracker",
+        "Bot_Tracker_Report_Stats": "Bot Tracker: Extra stats",
+        "Bot_Tracker_Report": "Bot Tracker: Report",
+        "Bot_Tracker_Total_Over_Time_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
+        "Config": "BotTracker Configuration",
+        "Delete": "delete",
+        "DisplayWidget": "BotTracker Display",
+        "DisplayWidget_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
+        "Error_empty": "is empty!",
+        "Error_Fileimport_Not_Even": "Number of parameter in file are not even",
+        "Error_Fileimport_Upload": "Error during upload",
+        "ExtraStats": "Extra Stats",
+        "File": "File",
+        "false": "No",
+        "hits_by_Bot": "hits by Bot",
+        "Importfile": "Choose Importfile...",
+        "Import_help_format": "botname1|botkeyword1|botname2|botkeyword2|...",
+        "Import_help_headline": "Dataset-Format:",
+        "Import_help_line1": "- every linefeed will be removed before the import, so you can insert a break after every bot-entry",
+        "Import_help_line2": "- the number of values must be even",
+        "Import_help_line3": "- there is NO delimiter \"|\" at the end",
+        "insert_db": "Insert/update default Bots",
+        "Message_bot_inserted": "Bots inserted",
+        "Message_deleted": "was deleted!",
+        "New": "New",
+        "NoOfActiveBots": "Number of Bots for this site",
+        "PluginDescription": "Detects bots & spiders and counts their visits without tracking them in the visitor log.",
+        "ReportDocumentation": "This reports shows the total of bots on given date(s). Note that Bot Tracker does not use Segments.",
+        "save_changes": "Save",
+        "SelectAWebsite": "Select a website",
+        "send_file": "Upload and Process File",
+        "Single": "Single",
+        "Top_10_Bots": "Bot Tracker: Top 10 Bots",
+        "Top_10_Bots_Deprecated_Report": "Bot Tracker: Total over time Top 10 Bots (deprecated report)",
+        "Top10": "Top10",
+        "TopTenDocumentation": "This reports shows a chart of the top 10 bots on given date(s). Note that Bot Tracker does not use Segments.",
+        "true": "Yes",
+        "Visit_Timestamp": "Time stamp",
+        "Widgets": "BotTracker"
+    }
 }
