--- a/lang/en.json
+++ b/lang/en.json
@@ -4,16 +4,16 @@
         "Added": "added",
         "BotActive": "Active",
         "BotCount": "Visit Count",
-        "BotKeyword": "Keyword",
+        "BotKeyword": "Keyword (user agent)",
         "BotLastVisit": "Last visit",
-        "BotName": "Bot-Name",
+        "BotName": "Name",
         "BotTracker": "Bot Tracker",
         "Bot_Tracker": "Bot Tracker",
         "Bot_Tracker_Report_Stats": "Bot Tracker: Extra stats",
         "Bot_Tracker_Report": "Bot Tracker: Report",
         "Bot_Tracker_Total_Over_Time_Deprecated_Report": "Bot Tracker: Totals over time (deprecated report)",
-        "Bot_Tracker_UntrackedBots": "Bot Tracker: Untracked bots",
-        "Bot_Tracker_UntrackedBotsDocumentation": "Bots that we do not collect statistics for, that visited the site. The useragent string could be used for tracking that bot.",
+        "Bot_Tracker_OtherBots": "Bot Tracker: Other Bots",
+        "Bot_Tracker_OtherBotsDocumentation": "Bots identified by Device Detector, not configured by Bot Tracker. The useragent string could be used for tracking the bot.",
         "Config": "Configuration",
         "Delete": "delete",
         "DisplayWidget": "Bot Tracker Display",
